--- a/src/ParcelBundle/Resources/config/validation.yml
+++ b/src/ParcelBundle/Resources/config/validation.yml
@@ -3,9 +3,13 @@ ParcelBundle\Entity\Parcel:
         weight:    
             - NotBlank: ~
             - NotNull: ~
-            - Range: min: 0.01 max: 99999
-            minMessage: "The weight value must be greater then 0.01"
-            maxMessage: "The weight value must be smaller or qual to 99999"
+            - Range: 
+                min: 0.01 
+                max: 99999
+                minMessage: "The weight value must be greater then 0.01"
+                maxMessage: "The weight value must be smaller or qual to 99999"
         notes:    
-            - Length: min: 1 max: 99999
-            maxMessage: "Your note must be smaller or equal to 99999 signs"                        
+            - Length: 
+                min: 1 
+                max: 99999
+                maxMessage: "Your note must be smaller or equal to 99999 signs"                        
