--- a/src/ParcelOrderBundle/Resources/config/validation.yml
+++ b/src/ParcelOrderBundle/Resources/config/validation.yml
@@ -1,20 +1,14 @@
-ParcelBundle\Entity\Parcel:
+ParcelOrderBundle\Entity\ParcelOrder:
     properties:
-        idSender:    
+        parcelOrderHash:    
             - NotBlank: ~
             - NotNull: ~
-            - Range: min: 1 max: 99999
-            maxMessage: "The idSender value must be smaller or equal to 99999"
-        idReceiver:    
-            - NotBlank: ~
-            - NotNull: ~
-            - Range: min: 1 max: 99999
-            maxMessage: "The idReceiver value must be smaller or equal to 99999"
-        idPostman:    
-            - NotBlank: ~
-            - NotNull: ~
-            - Range: min: 1 max: 99999
-            maxMessage: "The idPostman value must be smaller or equal to 99999"
+            - Range: 
+                min: 1 
+                max: 99999
+                maxMessage: "The idSender value must be smaller or equal to 99999"
         notes:    
-            - Length: min: 1 max: 99999
-            maxMessage: "Your note must be smaller or equal to 99999 signs"            
+            - Length: 
+                min: 1 
+                max: 99999
+                maxMessage: "Your note must be smaller or equal to 99999 signs"            
